--- a/TZ1/TZ1/View/Cells/CategoryCollectionViewCell.xib
+++ b/TZ1/TZ1/View/Cells/CategoryCollectionViewCell.xib
@@ -31,16 +31,16 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="KBH-gM-r4D"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NRX-a2-9zc">
                                 <rect key="frame" x="0.0" y="98" width="120" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="SiX-FT-qgG"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="SiX-FT-qgG"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -81,7 +81,7 @@
                 <outlet property="imageView" destination="mQk-mk-Nop" id="zAe-7d-Dgk"/>
                 <outlet property="mainView" destination="0AP-rL-UXA" id="1oN-2M-GVN"/>
             </connections>
-            <point key="canvasLocation" x="333.58778625954199" y="186.26760563380282"/>
+            <point key="canvasLocation" x="333.33333333333337" y="186.16071428571428"/>
         </collectionViewCell>
     </objects>
     <resources>
