--- a/TZ1/TZ1/View/Cells/SecondCategoryCollectionViewCell.xib
+++ b/TZ1/TZ1/View/Cells/SecondCategoryCollectionViewCell.xib
@@ -41,12 +41,16 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zbo-GQ-IxV">
-                                <rect key="frame" x="-1" y="136" width="140" height="23"/>
+                                <rect key="frame" x="0.0" y="129" width="140" height="23"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="41b-k9-EVT">
+                                <rect key="frame" x="113" y="129" width="27" height="18"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -64,10 +68,11 @@
                 <outlet property="imageView" destination="sRo-NB-ccw" id="Bkq-2c-Wu1"/>
                 <outlet property="mainView" destination="3IJ-kh-aVo" id="by1-F1-RHc"/>
                 <outlet property="priceAndGramsLabel" destination="Zbo-GQ-IxV" id="FUm-eN-gJA"/>
+                <outlet property="spicyImage" destination="41b-k9-EVT" id="fbN-zE-29x"/>
                 <outlet property="subtitleName" destination="bKn-1r-2qo" id="JRa-Rd-ed2"/>
                 <outlet property="titleName" destination="NRL-UR-Gh5" id="PC9-3I-5pm"/>
             </connections>
-            <point key="canvasLocation" x="155.72519083969465" y="100.70422535211269"/>
+            <point key="canvasLocation" x="155.63380281690141" y="99.236641221374043"/>
         </collectionViewCell>
     </objects>
     <resources>
